--- a/network_tools/network_tools.Rmd
+++ b/network_tools/network_tools.Rmd
@@ -1,18 +1,32 @@
 Network Tools
 ========================================================
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring web pages (click the **MD** toolbar button for help on Markdown).
+Load settings file
 
+```{r}
+source("../load_settings.R")
+```
 
 This will generate graphml files for everything in forum, at the moment this is based on posts in a thread, bungs them in the output folder, comment this out if you don't want the Gephi files:
 
 ```{r}
-source("network_tools/graphml_generation_tool.R")
+#source("network_tools/graphml_generation_tool.R")
 ```
 
-We can also figure out the top inbetweenness centrality for each poster:
+We can also figure out the top inbetweenness centrality for each poster using the script at:
 
-```{r fig.width=7, fig.height=6}
-plot(cars)
+```{r}
+source("centrality_measures.R")
 ```
 
+We can see the anon id of the top betweeness centrality for each forum: 
+
+```{r}
+
+for (i in settings.databases[,1]) {
+  print(i)
+  print(top_bm[[i]])
+}
+```
+
+Let's find out who they are:
