looking for logins

--- a/Clickstrem Stats/Click stream.Rmd
+++ b/Clickstrem Stats/Click stream.Rmd
@@ -1,19 +1,25 @@
-Basic Forum Stats
+Clickstream Stats
 ========================================================
 
-```{r echo=FALSE, results='hide'}
-courseIDs<-c("aiplan","astro","crit","edc","equine","intro")
-read_chunk("./Click stream.R")
-```
-
-
-The top lengths and their referers
+login receiver
 -------------
 ```{r echo=FALSE, results='asis'}
 
-for(i in 1:length(lectureviews.df)){
+for(i in 1:length(loginrecevier.df)){
    cat(paste("### ",courseIDs[i],"\r\n\r\n"))
-   kable(lectureviews.df[[i]], row.names=F, align=rep("c", length(colnames(lectureviews.df))))
+   kable(loginrecevier.df[[i]], row.names=F, align=rep("c", length(colnames(loginrecevier.df[[i]]))))
+}
+
+
+```
+
+Account Signin
+-------------
+```{r echo=FALSE, results='asis'}
+
+for(i in 1:length(signin.df)){
+   cat(paste("### ",courseIDs[i],"\r\n\r\n"))
+   kable(signin.df[[i]], row.names=F, align=rep("c", length(colnames(signin.df[[i]]))))
 }
 
 
